# PYTHON-SOFTWARE-ENGINEERING

PYTHON-SOFTWARE-ENGINEERING/Python Core 2.0/goit-algo-hw-03/: dz_03-01.py  dz_03-02.py
PYTHON-SOFTWARE-ENGINEERING/Python Core 2.0/goit-algo-hw-04/: dz_04-01.py  dz_04-02.py  dz_04-04.py
PYTHON-SOFTWARE-ENGINEERING/Python Core 2.0/goit-algo-hw-05/: dz_05-01.py  dz_05-02.py  dz_05-04.py
PYTHON-SOFTWARE-ENGINEERING/Python Core 2.0/goit-algo-hw-06/: Untitled-1.py  dz_06.py  technical_task_06.py
PYTHON-SOFTWARE-ENGINEERING/Python Core 2.0/goit-algo-hw-07/: dz_07.py
PYTHON-SOFTWARE-ENGINEERING/Python Core 2.0/goit-algo-hw-08/: dz_08.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/: uml.drawio
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-01/: dz_01.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-02/: personal-assistant.dockerfile  pyproject.toml
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-03/: dz_03.01.py  dz_03.02.01.py  dz_03.02.02.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-04/: main.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-05/: main.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-06/: dz_06.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-07/: alembic.ini  docker-compose.yml  main.py  models.py  my_select.py  project_structure.ini  requirements.txt  seed.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-08/: MongoDB.py  consumer.py  load_data.py  models.py  producer.py  project_structure.ini  requirements.txt  search_quotes.py
PYTHON-SOFTWARE-ENGINEERING/Python Web/goit-web-hw-09/: quotes.json  (+3 more)
(+105 files in other folders)
