[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = "A CLI-based personal assistant project"
authors = ["Xeljndjhtw <boxbmv.g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
